crates/rapidus_parser/src/parser/snapshots/rapidus_parser__parser__tests__parse_add_2.snap
---
source: crates/rapidus_parser/src/parser/mod.rs
assertion_line: 238
expression: module
---
Module {
    span: Span {
        start: 0,
        end: 7,
    },
    children: [
        Stmt(
            Stmt {
                span: Span {
                    start: 0,
                    end: 7,
                },
                kind: Expr(
                    BinOp(
                        BinOpExpr {
                            op: Add,
                            lhs: Literal(
                                Num(
                                    Num {
                                        span: Span {
                                            start: 0,
                                            end: 1,
                                        },
                                        val: 2.0,
                                        raw: "2",
                                    },
                                ),
                            ),
                            rhs: Literal(
                                Num(
                                    Num {
                                        span: Span {
                                            start: 5,
                                            end: 7,
                                        },
                                        val: 40.0,
                                        raw: "40",
                                    },
                                ),
                            ),
                            span: Span {
                                start: 0,
                                end: 7,
                            },
                        },
                    ),
                ),
            },
        ),
    ],
}
